== Changelog

=== 3.6 (Planned to 12.04.2016)
* (Planned) use BrowserMobProxy to download files
* Add method `$.screenshotAsImage()`: `BufferedImage elementScreenshot = $(".logo").screenshotAsImage();`
* #321 set default page load strategy back to "normal"
* fixed TestNG TextReport Listener, now only classes annotated with @Report will get reported
* #335 Add support for non-public page objects

=== 3.5.1 (Released 04.04.2016)
* #309 method $$.shouldHave(size()) should not fail when timeout happens after the 1st check

=== 3.5 (Released 31.03.2016)
* #274 added advanced checks for collection size: <, <=, >, >=, <>
* #308 set page load strategy to "none" by default
* #306 method $.toString() always includes latest value of "value" attribute
* Upgraded to selenium-java 2.53.0, changelog: https://github.com/SeleniumHQ/selenium/blob/master/java/CHANGELOG

=== 3.4 (Released 03.03.2016)
* #297 Can set chrome switches with system property `-Dselenide.chrome.switches=--disable-popup-blocking`
* #296 Can set browser version with system property `-Dselenide.browser.version=8`
* #287 add pollingIntervalMilliseconds parameter to #waitUntil #waitWhile
* Typo in property name selenide.collectionsTimeout fixed
* Upgraded to selenium-java 2.52.0, changelog: http://selenium2.ru/news/170-selenium-252.html
* Upgraded to htmlunit 2.20, changelog: http://htmlunit.sourceforge.net/changes-report.html#a2.20

=== 3.3 (Released 10.02.2016)
* #277 Ajax support for collections:
  Collection methods (operator $$) wait if collection elements get loaded asynchronously
* added collectionsPollingInterval (defaults to 0,2 s) and collectionsTimeout (defaults to 6 s) to configuration params
* Upgraded to selenium-java 2.51.0

=== 3.2 (Released 29.01.2016)
* #275 Added method for selecting option by index: `$("select").selectOption(3)`
* #272 Add setting "selenide.browser-size" to configure browser window size
* Fixed Bug in showing Selenium WebDriver version